--- a/translate.html
+++ b/translate.html
@@ -133,7 +133,7 @@ var rArr = document.createElement('span');
 lArr.innerHTML = '⇠';
 rArr.innerHTML = '⇢';
 
-$('#card').click(async function () {
+$('#card').click(function () {
 	let x = new test();
 	let questions = x.generate();
 	console.log(questions);
